--- a/category.html
+++ b/category.html
@@ -13,7 +13,7 @@
             <li class="tag">Classical</li>
             <li class="tag">Rock</li>
             <li class="tag">Children</li>
-            <li class="tag">Podcast</li>
+            <li class="tag">Podcasts</li>
         </ul>
     </section>
 </body>
