--- a/category.html
+++ b/category.html
@@ -1,7 +1,7 @@
 <!doctype html lang="en">
 <head>
     <title>Muscial Categories</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="filter">
